# cprelmaster

./: CMakeLists.txt  Doxyfile.in  Info.plist  LICENSE.txt  Nodes.xml  Tokens.xml  and_8hh_source.html  annotated.html  classMPG_1_1CPRelVar-members.html  classMPG_1_1CPRelVar.html  classMPG_1_1CPRel_1_1ArityMissmatch-members.html  classMPG_1_1CPRel_1_1ArityMissmatch.html  classMPG_1_1CPRel_1_1CPRelVarImp-members.html  classMPG_1_1CPRel_1_1CPRelVarImp.html  classMPG_1_1CPRel_1_1CPRelView-members.html  classMPG_1_1CPRel_1_1CPRelView.html  classMPG_1_1CPRel_1_1ComplementView-members.html  classMPG_1_1CPRel_1_1ComplementView.html  classMPG_1_1CPRel_1_1ConstCPRelView-members.html  classMPG_1_1CPRel_1_1ConstCPRelView.html  classMPG_1_1CPRel_1_1DescIterator-members.html  classMPG_1_1CPRel_1_1DescIterator.html  classMPG_1_1CPRel_1_1GRelation-members.html  classMPG_1_1CPRel_1_1GRelation.html  classMPG_1_1CPRel_1_1GRelationIter-members.html  classMPG_1_1CPRel_1_1GRelationIter.html  classMPG_1_1CPRel_1_1InvalidPermutation-members.html  classMPG_1_1CPRel_1_1InvalidPermutation.html  classMPG_1_1CPRel_1_1OutOfLimits-members.html  classMPG_1_1CPRel_1_1OutOfLimits.html  classMPG_1_1CPRel_1_1PermDescriptor-members.html  classMPG_1_1CPRel_1_1PermDescriptor.html  classMPG_1_1CPRel_1_1PermutedView-members.html  classMPG_1_1CPRel_1_1PermutedView.html  classMPG_1_1CPRel_1_1Prop_1_1Equal-members.html  classMPG_1_1CPRel_1_1Prop_1_1Equal.html  classMPG_1_1CPRel_1_1Prop_1_1Intersect-members.html  classMPG_1_1CPRel_1_1Prop_1_1Intersect.html  classMPG_1_1CPRel_1_1Prop_1_1Join-members.html  classMPG_1_1CPRel_1_1Prop_1_1Join.html  (+69 more)
bdddomain/: CMakeLists.txt  abstract.cpp  bdd-print.cpp  bdd-visitor.hpp  bdd.cpp  bdd.hh  cube-iterator.cpp  cube-iterator.hh  cudd.patch  cudd2.patch  cuddFactory.hh  domain.hh  domainSpace.cpp  domainSpace.hh  encoding.cpp  encoding.hh  exception.cpp  exception.hh  grelation.cpp  grelation.hh  manager.cpp  manager.hh  perm-descriptor.hh  proj-descriptor.hh  rel-impl.cpp  rel-impl.hh  relation.cpp  relation.hh  relations.cpp  relations.hh  replace.cpp  tuple.cpp  tuple.hh  unique.c
bdddomain/tests/: CMakeLists.txt  bddrel.cpp  relation.cpp  tuple-variadic.cpp  tuple.cpp
cdd-obj/: cdd.cc  cdd.cpp  cdd.hh
cmake-support/: FindBoostOrExternal.cmake  FindCompiler.cmake  FindGecode.cmake  FindGecodeOrExternal.cmake  FindSystem.cmake  util.cmake
cprel/: CMakeLists.txt  branch.hpp  complement-view.hh  const-view.hh  cprel.hh  cprel.vis  descriptor.hh  grelation.cpp  grelation.hh  main.cpp  permuted-view.hh  queens.cpp  rel.hh  rel.vis  tuple.hh  var-imp.hpp  var.hh  varimp.cpp  varimp.hh  view.hh
cprel/branch/: branch.cpp  none-any.hpp
cprel/grel-builtin/: arith.cpp
cprel/prop/: and.cpp  and.hh  and.hpp  cardinality.cpp  cardinality.hh  channel.cpp  channel.hh  dom.cpp  equality.cpp  equality.hh  follow.cpp  follow.hh  functional.cpp  functional.hh  join-all.cpp  join.cpp  join.hh  permutation.cpp  permutation.hh  projection.cpp  projection.hh  tuple.cpp  tuple.hh
cprel/prop/tests/: and.cpp
cprel/var/: rel.cpp  rel.hpp
cprel/var-imp/: rel.cpp  rel.hpp
cptuple/: cptuple.hh  cptuple.vis  var.hh  varimp.cpp  varimp.hh  view.hh
cptuple/branch/: branch.cpp
cudd/: Makefile  cuddBddIte.c  cuddCdd.c  cuddCdd.h  cuddPriority.c
cudd-2.4.2/: CMakeCompilerFlags.txt  CmakeLists.txt  Makefile
cudd-2.4.2/cudd/: CMakeLists.txt  cudd.h  cuddBddAbs.c  testcudd  unique.c  unique.h
cudd-2.4.2/epd/: CMakeLists.txt
cudd-2.4.2/mtr/: CMakeLists.txt
cudd-2.4.2/nanotrav/: nanotrav
cudd-2.4.2/sis/: cuddBddPort.c
cudd-2.4.2/st/: CMakeLists.txt
cudd-2.4.2/util/: CMakeLists.txt  cpu_stats.c  util.h
doc/: declground-ex.cpp  main.hh
doc/cprel/: basis.tex  cprel-abbreviations.tex  cprel-doc-introduction.tex  cprel-doc-relations.tex  cprel-doc.tex  cprel-math-notation.tex  cprel.tex  domainrepr.org  thesis.org  uclthesis.el
gelisp/: gecheader.hpp  gelisp-setup-linux.lisp  gelisp-setup-mac.lisp  gelisp.cpp  gelisp.hh  gelisp.hpp  gelisp.old.cpp  gelisp.old.hpp  gelispcl.cpp  setup.lisp  test.cpp  test.hh  test.lisp  test2.lisp
rel/: grelation.cpp  grelation.hh
tests/: CMakeLists.txt  and.cpp  bdd.cpp  cardinality.cpp  channel.cpp  dom.cpp  domain-test.cc  domain-test.cpp  equality.cpp  fdddomain.cpp  follow-test.cpp  follow.cpp  followAll.cpp  followall-test.cpp  functional.cpp  gcp.cpp  grel-test.cpp  join-test.cpp  join.cpp  join2.cpp  join3.cpp  join4.cpp  joinAll.cpp  midi-four-seasons.cpp  minimal.cpp  permutation.cpp  permute-test.cpp  proj-test.cpp  projection-op.cpp  projection.cpp  r01.c  r02.c  r03.c  restrFall.cpp  swap-test.cpp  test-main.cpp  testcdd.c  testcdd.cpp  unique-test.cpp  visitor.cpp
tests/ground-relations/: midi-medium.txt  midi-small.cpp  midi-small.hh  midi-small.txt  r3.txt  s2.txt  small-rel.txt  small-rel2.txt
unused/: Makefile
